fixing positioning of hero on mobile

--- a/components/sections/Hero/Hero.module.css
+++ b/components/sections/Hero/Hero.module.css
@@ -274,8 +274,8 @@
   .profileImage {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    object-position: center top;
+    object-fit: contain;
+    object-position: center center;
   }
 
   .contactText {
